--- a/src/global.css
+++ b/src/global.css
@@ -23,8 +23,10 @@ body {
   --gray-scale-white: #fff;
   --gray-scale-gray-500: #808080;
   --gray-scale-gray-900: #1a1a1a;
+  --color-gray-100: rgba(0, 0, 0, 0.7);
   --gray-scale-gray-800: #333;
   --gren-gray-scale-900: #002603;
+  --color-darkslategray-100: rgba(51, 51, 51, 0.7);
   --gray-scale-gray-300: #b3b3b3;
   --gray-scale-gray-400: #999;
   --color-limegreen-100: #1acc21;
@@ -81,6 +83,7 @@ body {
   --padding-4xl: 23px;
   --padding-13xl: 32px;
   --padding-2xl: 21px;
+  --padding-35xl: 54px;
   --padding-29xl: 48px;
   --padding-5xs-9: 7.9px;
   --padding-lg: 18px;
